--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "mongoose-paginate-v2": "^1.9.0"
   }
 }
